# restuff

./: Cargo.toml  README.md  package.json  postcss.config.cjs  todo.txt  uno.config.ts  uno.css
css/: index.css
restuff-api/: .env  .gitignore  Cargo.toml
restuff-api/crates/prettier/: Cargo.toml
restuff-api/crates/prettier/src/: lib.rs
restuff-api/crates/restuff-api/: Cargo.toml
restuff-api/crates/restuff-api/migrations/: 20240218193244_initial.up.sql
restuff-api/crates/restuff-api/src/: app_state.rs  db.rs  events.rs  frontend.rs  http_error.rs  http_utils.rs  main.rs  rpc.rs  srpc.rs  thing.rs
restuff-api/crates/srpc/: Cargo.toml
restuff-api/crates/srpc/src/: lib.rs  query.rs  srpc_input.rs  srpc_output.rs  ts_input.rs  zod.rs
restuff-api/crates/srpc_derive/: Cargo.toml
restuff-api/crates/srpc_derive/src/: lib.rs  router_typescript.rs  srpc_router.rs  ts.rs  ts_input.rs  zod.rs
restuff-api/crates/srpc_derive/tests/: expected.ts  expected_zod.ts  generate_ts.rs  generate_zod.rs
restuff-api/src/: main.rs
restuff-www/: package.json  tsconfig.json  unocss.config.ts  vite.config.ts
restuff-www/src/: App.tsx  index.tsx  rpc.ts  rpcClient.ts
restuff-www/src/pages/: Home.tsx
src/: add_thing.rs  app.rs  fileserv.rs  lib.rs  main.rs
src/components/: buttons.rs  mod.rs
style/: main.css
