[package]
name = "restuff-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum.workspace = true
serde.workspace = true
tokio.workspace = true
srpc.workspace = true
prettier.workspace = true
srpc_derive.workspace = true
anyhow = { version = "1.0.79", features = ["backtrace"] }
once_cell = "1.19.0"
reqwest = { version = "0.11.24", features = ["stream"] }
serde_json = "1.0.113"
thiserror = "1.0.57"
futures-io = "0.3.30"
dotenv = "0.15.0"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "json"
] }
chrono = { version = "0.4.34", features = ["serde"] }
insta = { version = "1.34.0", features = ["serde"] }
async-trait.workspace = true
