[package]
name = "srpc_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.78"
prettyplease = "0.2.16"
change-case = "0.2.0"
itertools = "0.12.1"
darling = "0.20.8"

[dev-dependencies]
axum.workspace = true
srpc.workspace = true
serde.workspace = true
pretty_assertions = "1.4.0"
prettier.workspace = true
async-trait.workspace = true
insta.workspace = true
